--- a/projet_info/app_info/templates/app_info/map.html
+++ b/projet_info/app_info/templates/app_info/map.html
@@ -39,19 +39,19 @@
         <div class="image-container">
             <img src="{% static 'png-transparent-restaurant-gratis-small-restaurant-design-interior-design-stool-interior-design-services-removebg-preview.png' %}" alt="Image de restaurant">
             <div class="parallelepiped21">
-                <div class="table21" data-table-id="table21"></div>
+                <div class="table21" data-table-id="7"></div>
                 
             <div class="parallelepiped22">
-                <div class="table22" data-table-id="table22"></div>
+                <div class="table22" data-table-id="6"></div>
             </div>
             <div class="parallelepiped41">
-                <div class="table41" data-table-id="table41"></div>
+                <div class="table41" data-table-id="5"></div>
             </div>
-            <div class="table11" data-table-id="table11"></div>
-            <div class="table12" data-table-id="table12"></div>
-            <div class="table13" data-table-id="table13"></div>
-            <div class="table14" data-table-id="table14"></div>
-            <div class="table15" data-table-id="table15"></div>
+            <div class="table11" data-table-id="4"></div>
+            <div class="table12" data-table-id="3"></div>
+            <div class="table13" data-table-id="2"></div>
+            <div class="table14" data-table-id="1"></div>
+            <div class="table15" data-table-id="24"></div>
         </div>
     </div>
 
