--- a/projet_info/app_info/templates/app_info/ajouter_reservation.html
+++ b/projet_info/app_info/templates/app_info/ajouter_reservation.html
@@ -16,6 +16,15 @@
         <div class="row">
             <div class="col-md-12">
                 <form method="post" action="{% url 'ajouter_reservation' %}">
+                    {% if form.errors %}
+                        <div class="alert alert-danger">
+                            {% for error in form.non_field_errors %}
+                                <p>{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
+<!-- Votre code de formulaire ici -->
                         
                         {% csrf_token %}
                     <h1> Réserver une table </h1>
@@ -27,7 +36,7 @@
                         <label for="name">Nom:</label>
                         {{ form.nom }}
 
-                        <label for="date">Date et heure:</label>
+                        <label for="date">Date :</label>
                         {{ form.date_heure }}
 
                         <label for="heure">Heure:</label>
@@ -39,6 +48,7 @@
                     </fieldset>
                     
                     <button type="submit">Envoyer</button>
+                    
 
                 </form>
             </div>
