--- a/projet_info/app_info/templates/app_info/signup.html
+++ b/projet_info/app_info/templates/app_info/signup.html
@@ -1,10 +1,10 @@
 {% extends "app_info/base_generic.html" %}
 
 {% block content %}
-<h2>Inscription</h2>
-<form method="post">
+  <h2>Sign up</h2>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">S'inscrire</button>
-</form>
+    <button type="submit">Sign up</button>
+  </form>
 {% endblock %}
