--- a/projet_info/app_info/templates/app_info/ajouter_reservation.html
+++ b/projet_info/app_info/templates/app_info/ajouter_reservation.html
@@ -1,18 +1,61 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+
     <title>Document</title>
 </head>
-<header>
-
-</header>
 
 <body>
+<header>
+    <!-- navbar dans le header -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="{% url 'accueil' %}">
+                <img src="{% static 'logo.png' %}" alt="Logo" style="height:40px;">
 
-    <body>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'accueil' %}">Accueil <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'ajouter_reservation' %}">Reservation</a>
+                        </li>
+                    {% endif %}
+                        </li>
+
+                    </li>
+                </ul>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}" class="navbar-text">
+                        Déconnexion
+                    </a>
+                {% else %}
+                    <a href="{% url 'login' %}">Connexion</a> /
+                    <a href="{% url 'signup' %}">Créer un compte</a>
+                </a>
+                {% endif %}
+            </div>
+        </nav>
+    </header>
+    <!-- fin de la navbar -->
+
+
+
+
+
         <div class="row">
             <div class="col-md-12">
                 <form method="post" action="{% url 'ajouter_reservation' %}">
@@ -54,8 +97,7 @@
             </div>
         </div>
 
-    </body>
-
+    
 </body>
 
     
@@ -121,13 +163,13 @@
     button {
         padding: 19px 39px 18px 39px;
         color: #FFF;
-        background-color: #4bc970;
+        background-color: rgb(171, 29, 29);
         font-size: 18px;
         text-align: center;
         font-style: normal;
         border-radius: 5px;
         width: 100%;
-        border: 1px solid #3ac162;
+        border: 1px solid rgb(171, 29, 29);
         border-width: 1px 1px 3px;
         box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
         margin-bottom: 10px;
@@ -155,7 +197,7 @@
     }
     
     .number {
-        background-color: #5fcf80;
+        background-color: rgb(171, 29, 29);
         color: #fff;
         height: 30px;
         width: 30px;
