--- a/projet_info/app_info/templates/registration/login.html
+++ b/projet_info/app_info/templates/registration/login.html
@@ -15,42 +15,45 @@
 
 <body>
 
- <!-- navbar dans le header -->
- <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="{% url 'accueil' %}">
-            <img src="{% static 'logo.png' %}" alt="Logo" style="height:40px;">
+    <!-- navbar dans le header -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="{% url 'accueil' %}">
+                <img src="{% static 'logo.png' %}" alt="Logo" style="height:40px;">
 
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'accueil' %}">Accueil <span class="sr-only">(current)</span></a>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'menu' %}">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'ajouter_reservation' %}">Reservation</a>
-                    </li>
-
-                </li>
-            </ul>
-            {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}" class="navbar-text">
-                    Déconnexion
-                </a>
-            {% else %}
-                <a href="{% url 'login' %}">Connexion</a>
-                <a href="{% url 'signup' %}">Créer un compte</a>
             </a>
-            {% endif %}
-        </div>
-    </nav>
-</header>
-<!-- fin de la navbar -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'accueil' %}">Accueil <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'ajouter_reservation' %}">Reservation</a>
+                        </li>
+                    {% endif %}
+                        </li>
+
+                    </li>
+                </ul>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}" class="navbar-text">
+                        Déconnexion
+                    </a>
+                {% else %}
+                    <a href="{% url 'login' %}">Connexion</a> /
+                    <a href="{% url 'signup' %}">Créer un compte</a>
+                </a>
+                {% endif %}
+            </div>
+        </nav>
+    </header>
+    <!-- fin de la navbar -->
 
     <!-- gros container qui va tout englober -->
     <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
