--- a/projet_info/app_info/templates/app_info/accueil.html
+++ b/projet_info/app_info/templates/app_info/accueil.html
@@ -43,7 +43,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'list_reservations' %}">Mes Reservation</a>
                         </li>
-                    {% endif %}
+                        {% if user.is_staff %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'calendrier_reservations' %}">Calendrier</a>
+                        </li>
+                        {% endif %}
+                        {% endif %}
                         </li>
 
                     </li>
