--- a/projet_info/app_info/templates/app_info/ajouter_reservation.html
+++ b/projet_info/app_info/templates/app_info/ajouter_reservation.html
@@ -33,6 +33,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="{% url 'ajouter_reservation' %}">Reservation</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'list_reservations' %}">Mes Reservation</a>
+                        </li>
                     {% endif %}
                         </li>
 
