--- a/projet_info/app_info/templates/registration/login.html
+++ b/projet_info/app_info/templates/registration/login.html
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'ajouter_reservation' %}">Reservation</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'list_reservations' %}">Mes Reservation</a>
+                        </li>
                     {% endif %}
                         </li>
 
